manifests/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-routing
  namespace: apps
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/public-gateway
  http:
  
  - match:
    - uri:
        prefix: /booking
    route:
    - destination:
        host: booking-svc.apps.svc.cluster.local
        port:
          number: 4004
  - match:
    - uri:
        prefix: /movie
    route:
    - destination:
        host: movie-svc.apps.svc.cluster.local
        port:
          number: 4001
  - match:
    - uri:
        prefix: /payment
    route:
    - destination:
        host: payment-svc.apps.svc.cluster.local
        port:
          number: 4005
  - match:
    - uri:
        prefix: /seat
    route:
    - destination:
        host: seat-svc.apps.svc.cluster.local
        port:
          number: 4003
  - match:
    - uri:
        prefix: /theatre
    route:
    - destination:
        host: theatre-svc.apps.svc.cluster.local
        port:
          number: 4002
